--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     .hero {
       background: url('pawnshop-front.png') center/cover no-repeat;
-      color:white;
+      color:yellow;
       padding:100px 20px;
     }
     .hero h1 {font-size:48px; font-weight:bold; text-shadow:2px 2px 6px #000;}
@@ -36,7 +36,7 @@
 <!-- Hero Section -->
 <header class="hero w3-center">
   <h1>Jay's Pawnshop</h1>
-  <p>Serving the community since 2002</p>
+  <p>Serving the community since 1986</p>
 </header>
 
 <div class="w3-content" style="max-width:1200px">
@@ -110,3 +110,4 @@
 
 </body>
 </html>
+
