--- a/store.html
+++ b/store.html
@@ -24,7 +24,7 @@
   .product img {
     max-width: 100%;
     height: auto;
-    min-width: 200px; /* prevents small images from being tiny */
+    min-width: 200px; 
     display: block;
     margin: 0 auto;
     border-radius: 6px;
@@ -110,4 +110,5 @@ const products = [
 
 </body>
 </html>
+
 
