--- a/store.html
+++ b/store.html
@@ -15,6 +15,9 @@
     color:yellow;
     padding:100px 20px;
   }
+  .hero h1 {
+  color: yellow !important;
+}
   .hero h1 {font-size:48px; font-weight:bold; text-shadow:2px 2px 6px #000;}
   .hero p {font-size:20px; text-shadow:1px 1px 4px #000;}
   .section-title {margin-top:30px; border-bottom:2px solid #ccc; padding-bottom:10px;}
@@ -110,5 +113,6 @@ const products = [
 
 </body>
 </html>
+
 
 
