--- a/store.html
+++ b/store.html
@@ -82,8 +82,8 @@ const products = [
   {id:4, name:"NutriBullet", image:"product4.jpg", price:110, description:"Never opened, 900W."},
   {id:5, name:"Rog Ally X", image:"product5.jpg", price:799.99, description:"Handheld gaming PC."},
   {id:6, name:"Xbox Series S With Controller", image:"product6.jpg", price:275, description:"512GB with controller."},  
-  {id:7, name:"ASUS TUF Gaming Laptop", image:"product7.jpg", price:629, description:"15.6”, Ryzen 7, RTX GPU."},        
-  {id:8, name:"1991 Classic Major League Baseball Trivia Boardgame Series 2", image:"product8.jpg", price:50, description:"Vintage trivia board game."}
+  {id:7, name:"ASUS TUF Gaming Laptop", image:"product7.JPG", price:629, description:"15.6”, Ryzen 7, RTX GPU."},        
+  {id:8, name:"1991 Classic Major League Baseball Trivia Boardgame Series 2", image:"product8.JPG", price:50, description:"Vintage trivia board game."}
 ];
 
 document.addEventListener("DOMContentLoaded", () => {
@@ -137,3 +137,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
