--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="w3-col l4 s12">
       <div class="w3-card w3-white w3-padding">
         <h2 class="section-title">Owner</h2>
-      <img src="owner.jpg" alt="Owner">
+      <img src="owner.jpg" alt="Owner" style="width:150px;">
         <p><b>George "Jay" Couture</b><br>Owner & Operator</p>
       </div>
     </div>
@@ -110,6 +110,7 @@
 
 </body>
 </html>
+
 
 
 
