--- a/store.html
+++ b/store.html
@@ -26,17 +26,28 @@
   .footer {background:#222; color:#ccc; padding:20px; text-align:center;}
   .footer a {color:#fff; text-decoration:none; margin:0 5px;}
   .navbar {position:sticky; top:0; z-index:1000;}
-  .product img {
-    max-width: 100%;
-    height: auto;
-    min-width: 200px; 
-    display: block;
-    margin: 0 auto;
-    border-radius: 6px;
-  }
-  .product {margin-bottom:20px;}
   .price {color:#e67e22; font-weight:bold;}
   .social-icons i {margin:0 8px; font-size:20px;}
+
+  /* Grid layout */
+  .products-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    margin: 20px 0;
+  }
+  .product-card {
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    padding: 15px;
+    text-align: center;
+  }
+  .product-card img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 6px;
+  }
 </style>
 </head>
 <body class="w3-light-grey">
@@ -114,27 +125,26 @@ document.addEventListener("DOMContentLoaded", () => {
     `;
   } else {
     // store.html
-    const row = document.createElement("div");
-    row.className = "w3-row-padding w3-margin-top";
+    const grid = document.createElement("div");
+    grid.className = "products-grid";
+
     products.forEach(p => {
       const div = document.createElement("div");
-      div.className = "w3-col l3 m6 s12 product";
+      div.className = "product-card";
       div.innerHTML = `
-        <div class="w3-card w3-padding w3-center">
-          <a href="product.html?id=${p.id}">
-            <img src="${p.image}" alt="${p.name}">
-            <h4>${p.name}</h4>
-            <p class="price">$${p.price}</p>
-          </a>
-        </div>
+        <a href="product.html?id=${p.id}">
+          <img src="${p.image}" alt="${p.name}">
+          <h4>${p.name}</h4>
+          <p class="price">$${p.price}</p>
+        </a>
       `;
-      row.appendChild(div);
+      grid.appendChild(div);
     });
-    container.appendChild(row);
+
+    container.appendChild(grid);
   }
 });
 </script>
 
 </body>
 </html>
-
