--- a/store.html
+++ b/store.html
@@ -94,7 +94,7 @@ const products = [
   {id:5, name:"Rog Ally X", image:"product5.jpg", price:799.99, description:"Handheld gaming PC."},
   {id:6, name:"Xbox Series S With Controller", image:"product6.jpg", price:275, description:"512GB with controller."},  
   {id:7, name:"ASUS TUF Gaming Laptop", image:"product7.JPG", price:629, description:"15.6”, Ryzen 7, RTX GPU."},        
-  {id:8, name:"1991 Classic Major League Baseball Trivia Boardgame Series 2", image:"product8.JPG", price:50, description:"Vintage trivia board game."}
+  {id:8, name:"1991 Classic Major League Baseball Trivia Boardgame Series 2", image:"product8.JPG", price:50, description:"Vintage trivia board game."},
   {id:9, name:"Nintendo Switch Classic Color Controlers", image:"product9.jpg", price:229.95, description:"Classic Nintendo Switch with included Carry Case"}
 ];
 
@@ -149,4 +149,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
