--- a/store.html
+++ b/store.html
@@ -95,7 +95,7 @@ const products = [
   {id:6, name:"Xbox Series S With Controller", image:"product6.jpg", price:275, description:"512GB with controller."},  
   {id:7, name:"ASUS TUF Gaming Laptop", image:"product7.JPG", price:629, description:"15.6”, Ryzen 7, RTX GPU."},        
   {id:8, name:"1991 Classic Major League Baseball Trivia Boardgame Series 2", image:"product8.JPG", price:50, description:"Vintage trivia board game."},
-  {id:9, name:"Nintendo Switch Classic Color Controlers", image:"product9.jpg", price:229.95, description:"Classic Nintendo Switch with included Carry Case"}
+  {id:9, name:"Nintendo Switch Classic Color Controlers", image:"product9.jpg", price:229.95, description:"Classic Nintendo Switch with included Carry Case"},
   {id:9, name:"Apple Airpod Pro Max", image:"product10.jpg", price:229.95, description:"Apple Airpods Pro Max"}
 ];
 
@@ -150,6 +150,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
