--- a/store.html
+++ b/store.html
@@ -1,91 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Jay's Pawnshop – Online Store</title>
-<meta name="description" content="Shop online at Jay's Pawnshop. Jewelry, tools, electronics, collectibles, and more.">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<style>
-  body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
-  .hero {
-    background: url('pawnshop-front.png') center/cover no-repeat;
-    color:yellow;
-    padding:100px 20px;
-  }
-  .hero h1 {
-    font-size:48px;
-    font-weight:bold;
-    text-shadow:2px 2px 6px #000;
-    color:yellow !important;
-  }
-  .hero p {font-size:20px; text-shadow:1px 1px 4px #000;}
-  .section-title {margin-top:30px; border-bottom:2px solid #ccc; padding-bottom:10px;}
-  .footer {background:#222; color:#ccc; padding:20px; text-align:center;}
-  .footer a {color:#fff; text-decoration:none; margin:0 5px;}
-  .navbar {position:sticky; top:0; z-index:1000;}
-  .price {color:#e67e22; font-weight:bold;}
-  .social-icons i {margin:0 8px; font-size:20px;}
-
-  /* Grid layout */
-  .products-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    margin: 20px 0;
-  }
-  .product-card {
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-    padding: 15px;
-    text-align: center;
-  }
-  .product-card img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 6px;
-  }
-</style>
-</head>
-<body class="w3-light-grey">
-
-<!-- Navigation -->
-<div class="w3-bar w3-black navbar">
-  <a href="index.html" class="w3-bar-item w3-button">Home</a>
-  <a href="store.html" class="w3-bar-item w3-button">Store</a>
-  <a href="index.html#contact" class="w3-bar-item w3-button">Contact</a>
-</div>
-
-<!-- Hero Section -->
-<header class="hero w3-center">
-  <h1>Online Store</h1>
-  <p>Browse our inventory and shop with confidence</p>
-</header>
-
-<!-- Main Content -->
-<div id="main-content" class="w3-content" style="max-width:1200px"></div>
-
-<!-- Footer -->
-<footer class="footer">
-  <p>&copy; 2025 Jay's Pawnshop</p>
-  <p>Hours: Mon–Fri 9am–6pm | Sat 9am–5pm | Sun Closed</p>
-  <p>
-    <a href="index.html">Home</a> | 
-    <a href="store.html">Store</a> | 
-    <a href="index.html#contact">Contact</a>
-  </p>
-  <div class="social-icons">
-    <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-    <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-  </div>
-</footer>
-
 <script>
-// central product data
 const products = [
   {id:1, name:"Oled Nintendo Switch with White Controllers", image:"product1.jpg", price:225, description:"Includes Joy-Cons and charger."},
   {id:2, name:"Dual Sense Edge Playstation Controller", image:"product2.jpg", price:150, description:"Customizable PS5 controller."},
@@ -95,7 +8,7 @@ const products = [
   {id:6, name:"Xbox Series S With Controller", image:"product6.jpg", price:275, description:"512GB with controller."},  
   {id:7, name:"ASUS TUF Gaming Laptop", image:"product7.JPG", price:629, description:"15.6”, Ryzen 7, RTX GPU."},        
   {id:8, name:"1991 Classic Major League Baseball Trivia Boardgame Series 2", image:"product8.JPG", price:50, description:"Vintage trivia board game."},
-  {id:9, name:"Nintendo Switch Classic Color Controlers", image:"product9.jpg", price:229.95, description:"Classic Nintendo Switch with included Carry Case"},
+  {id:9, name:"Nintendo Switch Classic Color Controllers", image:"product9.jpg", price:229.95, description:"Classic Nintendo Switch with included Carry Case"},
   {id:10, name:"Apple Airpod Pro Max", image:"product10.jpg", price:229.95, description:"Apple Airpods Pro Max"}
 ];
 
@@ -105,7 +18,7 @@ document.addEventListener("DOMContentLoaded", () => {
   const id = params.get("id");
 
   if (id) {
-    // product.html
+    // Single product view
     const product = products.find(p => p.id === parseInt(id, 10));
     if (!product) {
       container.innerHTML = "<p>Product not found.</p>";
@@ -123,10 +36,11 @@ document.addEventListener("DOMContentLoaded", () => {
           <p><label>Email:<br><input type="email" name="Email" required></label></p>
           <button type="submit" class="w3-button w3-black">Order Now</button>
         </form>
+        <p><a href="store.html" class="w3-button w3-grey">Back to Store</a></p>
       </div>
     `;
   } else {
-    // store.html
+    // Grid view
     const grid = document.createElement("div");
     grid.className = "products-grid";
 
@@ -134,7 +48,7 @@ document.addEventListener("DOMContentLoaded", () => {
       const div = document.createElement("div");
       div.className = "product-card";
       div.innerHTML = `
-        <a href="product.html?id=${p.id}">
+        <a href="store.html?id=${p.id}">
           <img src="${p.image}" alt="${p.name}">
           <h4>${p.name}</h4>
           <p class="price">$${p.price}</p>
@@ -147,11 +61,3 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
-
-</body>
-</html>
-
-
-
-
-
