--- a/store.html
+++ b/store.html
@@ -1,3 +1,89 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Jay's Pawnshop – Online Store</title>
+<meta name="description" content="Shop online at Jay's Pawnshop. Jewelry, tools, electronics, collectibles, and more.">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<style>
+  body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+  .hero {
+    background: url('pawnshop-front.png') center/cover no-repeat;
+    color:yellow;
+    padding:100px 20px;
+  }
+  .hero h1 {
+    font-size:48px;
+    font-weight:bold;
+    text-shadow:2px 2px 6px #000;
+    color:yellow !important;
+  }
+  .hero p {font-size:20px; text-shadow:1px 1px 4px #000;}
+  .section-title {margin-top:30px; border-bottom:2px solid #ccc; padding-bottom:10px;}
+  .footer {background:#222; color:#ccc; padding:20px; text-align:center;}
+  .footer a {color:#fff; text-decoration:none; margin:0 5px;}
+  .navbar {position:sticky; top:0; z-index:1000;}
+  .price {color:#e67e22; font-weight:bold;}
+  .social-icons i {margin:0 8px; font-size:20px;}
+
+  /* Grid layout */
+  .products-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    margin: 20px 0;
+  }
+  .product-card {
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    padding: 15px;
+    text-align: center;
+  }
+  .product-card img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 6px;
+  }
+</style>
+</head>
+<body class="w3-light-grey">
+
+<!-- Navigation -->
+<div class="w3-bar w3-black navbar">
+  <a href="index.html" class="w3-bar-item w3-button">Home</a>
+  <a href="store.html" class="w3-bar-item w3-button">Store</a>
+  <a href="index.html#contact" class="w3-bar-item w3-button">Contact</a>
+</div>
+
+<!-- Hero Section -->
+<header class="hero w3-center">
+  <h1>Online Store</h1>
+  <p>Browse our inventory and shop with confidence</p>
+</header>
+
+<!-- Main Content -->
+<div id="main-content" class="w3-content" style="max-width:1200px"></div>
+
+<!-- Footer -->
+<footer class="footer">
+  <p>&copy; 2025 Jay's Pawnshop</p>
+  <p>Hours: Mon–Fri 9am–6pm | Sat 9am–5pm | Sun Closed</p>
+  <p>
+    <a href="index.html">Home</a> | 
+    <a href="store.html">Store</a> | 
+    <a href="index.html#contact">Contact</a>
+  </p>
+  <div class="social-icons">
+    <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+  </div>
+</footer>
+
 <script>
 const products = [
   {id:1, name:"Oled Nintendo Switch with White Controllers", image:"product1.jpg", price:225, description:"Includes Joy-Cons and charger."},
@@ -25,7 +111,7 @@ document.addEventListener("DOMContentLoaded", () => {
       return;
     }
     container.innerHTML = `
-      <div class="w3-card w3-padding w3-margin">
+      <div class="w3-card w3-padding w3-margin w3-white">
         <img src="${product.image}" alt="${product.name}" style="max-width:300px;display:block;margin:auto;">
         <h2>${product.name}</h2>
         <p class="price">$${product.price}</p>
@@ -61,3 +147,6 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
+</body>
+</html>
