--- a/store.html
+++ b/store.html
@@ -95,11 +95,11 @@ const products = [
   {id:7, name:"ASUS TUF Gaming Laptop", image:"product7.JPG", price:629, description:"15.6”, Ryzen 7, RTX GPU."},        
   {id:8, name:"1991 Classic Major League Baseball Trivia Boardgame Series 2", image:"product8.JPG", price:50, description:"Vintage trivia board game."},
   {id:9, name:"Nintendo Switch Classic Color Controllers", image:"product9.jpg", price:229.95, description:"Classic Nintendo Switch with included Carry Case"},
-  {id:10, name:"Apple Airpod Pro Max", image:"product10.jpg", price:229.95, description:"Apple Airpods Pro Max"}
-  {id:11, name:"PLACE HOLDER", image:"product11.jpg", price:0, description:"product11"}
-  {id:12, name:"PLACE HOLDER", image:"product12.jpg", price:0, description:"product12"}
-  {id:13, name:"PLACE HOLDER", image:"product13.jpg", price:0, description:"product13"}
-  {id:14, name:"PLACE HOLDER", image:"product14.jpg", price:0, description:"product14"}
+  {id:10, name:"Apple Airpod Pro Max", image:"product10.jpg", price:229.95, description:"Apple Airpods Pro Max"},
+  {id:11, name:"PLACE HOLDER", image:"product11.jpg", price:0, description:"product11"},
+  {id:12, name:"PLACE HOLDER", image:"product12.jpg", price:0, description:"product12"},
+  {id:13, name:"PLACE HOLDER", image:"product13.jpg", price:0, description:"product13"},
+  {id:14, name:"PLACE HOLDER", image:"product14.jpg", price:0, description:"product14"},
   {id:15, name:"PLACE HOLDER", image:"product15.jpg", price:0, description:"product15"}
 ];
 
@@ -155,4 +155,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
