--- a/store.html
+++ b/store.html
@@ -1,202 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Jay's Pawnshop – Online Store</title>
-<meta name="description" content="Shop online at Jay's Pawnshop. Jewelry, tools, electronics, collectibles, and more.">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<style>
-  body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
-  .hero {
-    background: url('pawnshop-front.png') center/cover no-repeat;
-    color:yellow;
-    padding:100px 20px;
-  }
-  .hero h1 {
-    font-size:48px;
-    font-weight:bold;
-    text-shadow:2px 2px 6px #000;
-    color:yellow !important;
-  }
-  .hero p {font-size:20px; text-shadow:1px 1px 4px #000;}
-  .section-title {margin-top:30px; border-bottom:2px solid #ccc; padding-bottom:10px;}
-  .footer {background:#222; color:#ccc; padding:20px; text-align:center;}
-  .footer a {color:#fff; text-decoration:none; margin:0 5px;}
-  .navbar {position:sticky; top:0; z-index:1000;}
-  .price {color:#e67e22; font-weight:bold;}
-  .social-icons i {margin:0 8px; font-size:20px;}
-
-  /* Grid layout */
-  .products-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    margin: 20px 0;
-  }
-  .product-card {
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-    padding: 15px;
-    text-align: center;
-  }
-  .product-card img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 6px;
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jay's Pawnshop – Store</title>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <style>
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    .product-card { margin: 15px; display: inline-block; vertical-align: top; }
+    .product-card img { width: 100%; height: auto; }
+  </style>
 </head>
-<body class="w3-light-grey">
+<body>
 
-<!-- Navigation -->
-<div class="w3-bar w3-black navbar">
-  <a href="index.html" class="w3-bar-item w3-button">Home</a>
-  <a href="store.html" class="w3-bar-item w3-button">Store</a>
-  <a href="index.html#contact" class="w3-bar-item w3-button">Contact</a>
-</div>
+  <h1 class="w3-center">Jay's Pawnshop Store</h1>
+  <div id="store" class="w3-row-padding w3-center"></div>
 
-<!-- Hero Section -->
-<header class="hero w3-center">
-  <h1>Online Store</h1>
-  <p>Browse our inventory and shop with confidence</p>
-</header>
+  <script>
+    const products = [
+      {
+        id: 1,
+        name: "Oled Nintendo Switch with White Controllers",
+        image: "product1.jpg",
+        price: 225,
+        description: "Includes Joy-Cons and charger.",
+        buyLink: "PASTE_SQUARE_LINK_HERE"
+      },
+      {
+        id: 2,
+        name: "Dewalt Cordless Drill Kit",
+        image: "product2.jpg",
+        price: 85,
+        description: "Comes with battery and charger.",
+        buyLink: "PASTE_SQUARE_LINK_HERE"
+      },
+      {
+        id: 3,
+        name: "Apple AirPods Pro",
+        image: "product3.jpg",
+        price: 120,
+        description: "Noise-cancelling earbuds, with case.",
+        buyLink: "PASTE_SQUARE_LINK_HERE"
+      }
+    ];
 
-<!-- Main Content -->
-<div id="main-content" class="w3-content" style="max-width:1200px"></div>
+    const params = new URLSearchParams(window.location.search);
+    const productId = params.get("id");
+    const storeDiv = document.getElementById("store");
 
-<!-- Footer -->
-<footer class="footer">
-  <p>&copy; 2025 Jay's Pawnshop</p>
-  <p>Hours: Mon–Fri 9am–6pm | Sat 9am–5pm | Sun Closed</p>
-  <p>
-    <a href="index.html">Home</a> | 
-    <a href="store.html">Store</a> | 
-    <a href="index.html#contact">Contact</a>
-  </p>
-  <div class="social-icons">
-    <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-    <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-  </div>
-</footer>
+    if (!productId) {
+      // Show product grid
+      products.forEach(p => {
+        storeDiv.innerHTML += `
+          <div class="w3-third product-card w3-card">
+            <img src="${p.image}" alt="${p.name}">
+            <h3>${p.name}</h3>
+            <p>$${p.price}</p>
+            <a href="store.html?id=${p.id}" class="w3-button w3-blue w3-margin">View</a>
+          </div>
+        `;
+      });
+    } else {
+      // Show single product detail
+      const product = products.find(p => p.id == productId);
+      if (product) {
+        storeDiv.innerHTML = `
+          <div class="w3-card w3-padding">
+            <img src="${product.image}" alt="${product.name}" style="max-width:300px;">
+            <h2>${product.name}</h2>
+            <p><strong>Price:</strong> $${product.price}</p>
+            <p>${product.description}</p>
 
-<script>
-// =========================
-// PRODUCT LIST
-// Add each product's Square checkout link in "buyLink"
-// =========================
-const products = [
-  {id:1, name:"Oled Nintendo Switch with White Controllers", image:"product1.jpg", price:225, description:"Includes Joy-Cons and charger.", buyLink:"<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-  <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/TWHhxps5?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #ffffff;
-    min-width: 212px;
-    background-color: #006aff;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 6px;
-  ">Buy now</a>
-  </div>
-</div>"},
-  {id:2, name:"Dual Sense Edge Playstation Controller", image:"product2.jpg", price:150, description:"Customizable PS5 controller.", buyLink:"https://square.link/u/REPLACE_WITH_PRODUCT_2_LINK"},
-  {id:3, name:"Dewalt Combo Kit", image:"product3.jpg", price:150, description:"Drill + impact driver combo.", buyLink:"https://square.link/u/REPLACE_WITH_PRODUCT_3_LINK"},
-  {id:4, name:"NutriBullet", image:"product4.jpg", price:110, description:"Never opened, 900W.", buyLink:"https://square.link/u/REPLACE_WITH_PRODUCT_4_LINK"},
-  {id:5, name:"Rog Ally X", image:"product5.jpg", price:799.99, description:"Handheld gaming PC.", buyLink:"https://square.link/u/REPLACE_WITH_PRODUCT_5_LINK"},
-  {id:6, name:"Xbox Series S With Controller", image:"product6.jpg", price:275, description:"512GB with controller.", buyLink:"https://square.link/u/REPLACE_WITH_PRODUCT_6_LINK"},
-  {id:7, name:"ASUS TUF Gaming Laptop", image:"product7.JPG", price:629, description:"15.6”, Ryzen 7, RTX GPU.", buyLink:"https://square.link/u/REPLACE_WITH_PRODUCT_7_LINK"},
-  {id:8, name:"1991 Classic Major League Baseball Trivia Boardgame Series 2", image:"product8.JPG", price:50, description:"Vintage trivia board game.", buyLink:"https://square.link/u/REPLACE_WITH_PRODUCT_8_LINK"},
-  {id:9, name:"Nintendo Switch Classic Color Controllers", image:"product9.jpg", price:229.95, description:"Classic Nintendo Switch with included Carry Case", buyLink:"https://square.link/u/REPLACE_WITH_PRODUCT_9_LINK"},
-  {id:10, name:"Apple Airpod Pro Max", image:"product10.jpg", price:229.95, description:"Apple Airpods Pro Max", buyLink:"https://square.link/u/REPLACE_WITH_PRODUCT_10_LINK"},
-  {id:11, name:"PLACE HOLDER", image:"product11.jpg", price:0, description:"product11", buyLink:"https://square.link/u/REPLACE_WITH_PRODUCT_11_LINK"},
-  {id:12, name:"PLACE HOLDER", image:"product12.jpg", price:0, description:"product12", buyLink:"https://square.link/u/REPLACE_WITH_PRODUCT_12_LINK"},
-  {id:13, name:"PLACE HOLDER", image:"product13.jpg", price:0, description:"product13", buyLink:"https://square.link/u/REPLACE_WITH_PRODUCT_13_LINK"},
-  {id:14, name:"PLACE HOLDER", image:"product14.jpg", price:0, description:"product14", buyLink:"https://square.link/u/REPLACE_WITH_PRODUCT_14_LINK"},
-  {id:15, name:"PLACE HOLDER", image:"product15.jpg", price:0, description:"product15", buyLink:"https://square.link/u/REPLACE_WITH_PRODUCT_15_LINK"}
-];
+            <!-- Square Buy Button -->
+            <div style="padding:20px;">
+              <a target="_blank" href="${product.buyLink}" style="
+                display:inline-block;
+                font-size:18px;
+                line-height:48px;
+                height:48px;
+                color:#ffffff;
+                min-width:212px;
+                background-color:#006aff;
+                text-align:center;
+                border-radius:6px;
+              ">Buy now</a>
+            </div>
 
-document.addEventListener("DOMContentLoaded", () => {
-  const container = document.getElementById("main-content");
-  const params = new URLSearchParams(window.location.search);
-  const id = params.get("id");
-
-  if (id) {
-    // =========================
-    // SINGLE PRODUCT VIEW
-    // =========================
-    const product = products.find(p => p.id === parseInt(id, 10));
-    if (!product) {
-      container.innerHTML = "<p>Product not found.</p>";
-      return;
+            <a href="store.html" class="w3-button w3-gray w3-margin">Back to Store</a>
+          </div>
+        `;
+      } else {
+        storeDiv.innerHTML = "<p>Product not found.</p>";
+      }
     }
-    container.innerHTML = `
-      <div class="w3-card w3-padding w3-margin w3-white">
-        <img src="${product.image}" alt="${product.name}" style="max-width:300px;display:block;margin:auto;">
-        <h2>${product.name}</h2>
-        <p class="price">$${product.price}</p>
-        <p>${product.description}</p>
-
-        <!-- =========================
-        BUY NOW BUTTON
-        Replace "buyLink" value above with your Square checkout link
-        ========================= -->
-        <a href="${product.buyLink}" target="_blank" class="w3-button w3-green w3-margin">Buy Now</a>
-
-        <!-- Optional: keep email order form -->
-        <form method="POST" action="mailto:CoutureOnline15@gmail.com" enctype="text/plain">
-          <input type="hidden" name="Product" value="${product.name}">
-          <p><label>Name:<br><input type="text" name="Name" required></label></p>
-          <p><label>Email:<br><input type="email" name="Email" required></label></p>
-          <button type="submit" class="w3-button w3-black">Order Now</button>
-        </form>
-
-        <p><a href="store.html" class="w3-button w3-grey">Back to Store</a></p>
-      </div>
-    `;
-  } else {
-    // =========================
-    // GRID VIEW
-    // =========================
-    const grid = document.createElement("div");
-    grid.className = "products-grid";
-
-    products.forEach(p => {
-      const div = document.createElement("div");
-      div.className = "product-card";
-      div.innerHTML = `
-        <a href="store.html?id=${p.id}">
-          <img src="${p.image}" alt="${p.name}">
-          <h4>${p.name}</h4>
-          <p class="price">$${p.price}</p>
-        </a>
-      `;
-      grid.appendChild(div);
-    });
-
-    container.appendChild(grid);
-  }
-});
-</script>
+  </script>
 
 </body>
 </html>
-
