--- a/store.html
+++ b/store.html
@@ -1,99 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jay's Pawnshop – Store</title>
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    .product-card { margin: 15px; display: inline-block; vertical-align: top; }
-    .product-card img { width: 100%; height: auto; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Jay's Pawnshop – Online Store</title>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<style>
+  body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+  .hero {
+    background: url('pawnshop-front.png') center/cover no-repeat;
+    color:yellow;
+    padding:100px 20px;
+  }
+  .hero h1 {font-size:48px;font-weight:bold;text-shadow:2px 2px 6px #000;color:yellow !important;}
+  .hero p {font-size:20px;text-shadow:1px 1px 4px #000;}
+  .footer {background:#222; color:#ccc; padding:20px; text-align:center;}
+  .footer a {color:#fff; text-decoration:none; margin:0 5px;}
+  .navbar {position:sticky; top:0; z-index:1000;}
+  .price {color:#e67e22; font-weight:bold;}
+  .social-icons i {margin:0 8px; font-size:20px;}
+
+  /* Grid layout */
+  .products-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    margin: 20px 0;
+  }
+  .product-card {
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    padding: 15px;
+    text-align: center;
+    min-height: 380px; /* ensures placeholders are same height */
+  }
+  .product-card img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 6px;
+  }
+  .placeholder {
+    background: #f0f0f0;
+    color: #888;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-size:18px;
+  }
+</style>
 </head>
-<body>
+<body class="w3-light-grey">
 
-  <h1 class="w3-center">Jay's Pawnshop Store</h1>
-  <div id="store" class="w3-row-padding w3-center"></div>
+<!-- Navigation -->
+<div class="w3-bar w3-black navbar">
+  <a href="index.html" class="w3-bar-item w3-button">Home</a>
+  <a href="store.html" class="w3-bar-item w3-button">Store</a>
+  <a href="index.html#contact" class="w3-bar-item w3-button">Contact</a>
+</div>
 
-  <script>
-    const products = [
-      {
-        id: 1,
-        name: "Oled Nintendo Switch with White Controllers",
-        image: "product1.jpg",
-        price: 225,
-        description: "Includes Joy-Cons and charger.",
-        buyLink: "PASTE_SQUARE_LINK_HERE"
-      },
-      {
-        id: 2,
-        name: "Dewalt Cordless Drill Kit",
-        image: "product2.jpg",
-        price: 85,
-        description: "Comes with battery and charger.",
-        buyLink: "PASTE_SQUARE_LINK_HERE"
-      },
-      {
-        id: 3,
-        name: "Apple AirPods Pro",
-        image: "product3.jpg",
-        price: 120,
-        description: "Noise-cancelling earbuds, with case.",
-        buyLink: "PASTE_SQUARE_LINK_HERE"
-      }
-    ];
+<!-- Hero Section -->
+<header class="hero w3-center">
+  <h1>Online Store</h1>
+  <p>Browse our inventory and shop with confidence</p>
+</header>
 
-    const params = new URLSearchParams(window.location.search);
-    const productId = params.get("id");
-    const storeDiv = document.getElementById("store");
+<!-- Main Content -->
+<div id="main-content" class="w3-content" style="max-width:1200px"></div>
 
-    if (!productId) {
-      // Show product grid
-      products.forEach(p => {
-        storeDiv.innerHTML += `
-          <div class="w3-third product-card w3-card">
-            <img src="${p.image}" alt="${p.name}">
-            <h3>${p.name}</h3>
-            <p>$${p.price}</p>
-            <a href="store.html?id=${p.id}" class="w3-button w3-blue w3-margin">View</a>
-          </div>
-        `;
-      });
-    } else {
-      // Show single product detail
-      const product = products.find(p => p.id == productId);
-      if (product) {
-        storeDiv.innerHTML = `
-          <div class="w3-card w3-padding">
-            <img src="${product.image}" alt="${product.name}" style="max-width:300px;">
-            <h2>${product.name}</h2>
-            <p><strong>Price:</strong> $${product.price}</p>
-            <p>${product.description}</p>
+<!-- Footer -->
+<footer class="footer">
+  <p>&copy; 2025 Jay's Pawnshop</p>
+  <p>Hours: Mon–Fri 9am–6pm | Sat 9am–5pm | Sun Closed</p>
+  <p>
+    <a href="index.html">Home</a> | 
+    <a href="store.html">Store</a> | 
+    <a href="index.html#contact">Contact</a>
+  </p>
+  <div class="social-icons">
+    <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+  </div>
+</footer>
 
-            <!-- Square Buy Button -->
-            <div style="padding:20px;">
-              <a target="_blank" href="${product.buyLink}" style="
-                display:inline-block;
-                font-size:18px;
-                line-height:48px;
-                height:48px;
-                color:#ffffff;
-                min-width:212px;
-                background-color:#006aff;
-                text-align:center;
-                border-radius:6px;
-              ">Buy now</a>
-            </div>
+<script>
+// =========================
+// Product List with placeholders
+// =========================
+const products = [
+  {id:1, name:"Oled Nintendo Switch with White Controllers", image:"product1.jpg", price:225, description:"Includes Joy-Cons and charger.", buyLink:"PASTE_SQUARE_LINK_HERE"},
+  {id:2, name:"Dual Sense Edge Playstation Controller", image:"product2.jpg", price:150, description:"Customizable PS5 controller.", buyLink:"PASTE_SQUARE_LINK_HERE"},
+  {id:3, name:"Dewalt Combo Kit", image:"product3.jpg", price:150, description:"Drill + impact driver combo.", buyLink:"PASTE_SQUARE_LINK_HERE"},
+  {id:4, name:"NutriBullet", image:"product4.jpg", price:110, description:"Never opened, 900W.", buyLink:"PASTE_SQUARE_LINK_HERE"},
+  {id:5, name:"Rog Ally X", image:"product5.jpg", price:799.99, description:"Handheld gaming PC.", buyLink:"PASTE_SQUARE_LINK_HERE"},
+  {id:6, name:"Xbox Series S With Controller", image:"product6.jpg", price:275, description:"512GB with controller.", buyLink:"PASTE_SQUARE_LINK_HERE"},
+  {id:7, name:"ASUS TUF Gaming Laptop", image:"product7.JPG", price:629, description:"15.6”, Ryzen 7, RTX GPU.", buyLink:"PASTE_SQUARE_LINK_HERE"},
+  {id:8, name:"1991 Classic Major League Baseball Trivia Boardgame Series 2", image:"product8.JPG", price:50, description:"Vintage trivia board game.", buyLink:"PASTE_SQUARE_LINK_HERE"},
+  {id:9, name:"Nintendo Switch Classic Color Controllers", image:"product9.jpg", price:229.95, description:"Classic Nintendo Switch with included Carry Case", buyLink:"PASTE_SQUARE_LINK_HERE"},
+  {id:10, name:"Apple Airpod Pro Max", image:"product10.jpg", price:229.95, description:"Apple Airpods Pro Max", buyLink:"PASTE_SQUARE_LINK_HERE"}
+];
 
-            <a href="store.html" class="w3-button w3-gray w3-margin">Back to Store</a>
-          </div>
-        `;
-      } else {
-        storeDiv.innerHTML = "<p>Product not found.</p>";
-      }
-    }
-  </script>
-
-</body>
-</html>
+const params = new URLSearchParams(window.location.search);
+const productId = params.get("id");
