--- a/store.html
+++ b/store.html
@@ -74,7 +74,7 @@
 <script>
 document.addEventListener("DOMContentLoaded", function() {
   const products = [
-    {name:"Oled Nintendo Switch with White Controllers", image:"product1.jpg", price:225, buyLink:"PLACE_SQUARE_LINK_HERE"},
+    {name:"Oled Nintendo Switch with White Controllers", image:"product1.jpg", price:225, buyLink:"https://square.link/u/TWHhxps5?src=embed"},
     {name:"Dual Sense Edge Playstation Controller", image:"product2.jpg", price:150, buyLink:"PLACE_SQUARE_LINK_HERE"},
     {name:"Dewalt Combo Kit", image:"product3.jpg", price:150, buyLink:"PLACE_SQUARE_LINK_HERE"},
     {name:"NutriBullet", image:"product4.jpg", price:110, buyLink:"PLACE_SQUARE_LINK_HERE"},
@@ -117,4 +117,5 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
 
