--- a/store.html
+++ b/store.html
@@ -73,8 +73,13 @@
 
 <script>
 document.addEventListener("DOMContentLoaded", function() {
-  const products = [
-    {name:"Oled Nintendo Switch with White Controllers", image:"product1.jpg", price:225, buyEmbed:"<div style="
+const products = [
+  {
+    name: "Oled Nintendo Switch with White Controllers",
+    image: "product1.jpg",
+    price: 225,
+    buyEmbed: `
+<div style="
   overflow: auto;
   display: flex;
   flex-direction: column;
@@ -86,30 +91,33 @@ document.addEventListener("DOMContentLoaded", function() {
   box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
   border-radius: 10px;
   font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
-  ">
+">
   <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/TWHhxps5?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #ffffff;
-    min-width: 212px;
-    background-color: #006aff;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 6px;
-  ">Buy now</a>
+    <a target="_blank" href="https://square.link/u/TWHhxps5" style="
+      display: inline-block;
+      font-size: 18px;
+      line-height: 48px;
+      height: 48px;
+      color: #ffffff;
+      min-width: 212px;
+      background-color: #006aff;
+      text-align: center;
+      box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+      border-radius: 6px;
+    ">Buy now</a>
   </div>
-</div>"},
-    {name:"Dual Sense Edge Playstation Controller", image:"product2.jpg", price:150, buyEmbed:"<!-- PLACE FULL SQUARE EMBED HERE -->"},
-    {name:"Dewalt Combo Kit", image:"product3.jpg", price:150, buyEmbed:"<!-- PLACE FULL SQUARE EMBED HERE -->"},
-    {name:"NutriBullet", image:"product4.jpg", price:110, buyEmbed:"<!-- PLACE FULL SQUARE EMBED HERE -->"},
-    {name:"Rog Ally X", image:"product5.jpg", price:799.99, buyEmbed:"<!-- PLACE FULL SQUARE EMBED HERE -->"},
-    {name:"Xbox Series S With Controller", image:"product6.jpg", price:275, buyEmbed:"<!-- PLACE FULL SQUARE EMBED HERE -->"},  
-    {name:"ASUS TUFF Gaming Laptop", image:"product7.jpg", price:629, buyEmbed:"<!-- PLACE FULL SQUARE EMBED HERE -->"},        
-    {name:"1991 Classic Major League Baseball Trivia Boardgame Series 2", image:"product8.jpg", price:50, buyEmbed:"<!-- PLACE FULL SQUARE EMBED HERE -->"}
-  ];
+</div>
+`
+  },
+  {name: "Dual Sense Edge Playstation Controller", image: "product2.jpg", price: 150, buyEmbed: "<!-- PLACE FULL SQUARE EMBED HERE -->"},
+  {name: "Dewalt Combo Kit", image: "product3.jpg", price: 150, buyEmbed: "<!-- PLACE FULL SQUARE EMBED HERE -->"},
+  {name: "NutriBullet", image: "product4.jpg", price: 110, buyEmbed: "<!-- PLACE FULL SQUARE EMBED HERE -->"},
+  {name: "Rog Ally X", image: "product5.jpg", price: 799.99, buyEmbed: "<!-- PLACE FULL SQUARE EMBED HERE -->"},
+  {name: "Xbox Series S With Controller", image: "product6.jpg", price: 275, buyEmbed: "<!-- PLACE FULL SQUARE EMBED HERE -->"},  
+  {name: "ASUS TUFF Gaming Laptop", image: "product7.jpg", price: 629, buyEmbed: "<!-- PLACE FULL SQUARE EMBED HERE -->"},        
+  {name: "1991 Classic Major League Baseball Trivia Boardgame Series 2", image: "product8.jpg", price: 50, buyEmbed: "<!-- PLACE FULL SQUARE EMBED HERE -->"}
+];
+
 
   const container = document.querySelector(".product-container");
 
@@ -131,3 +139,4 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
