--- a/store.html
+++ b/store.html
@@ -109,7 +109,37 @@ const products = [
 </div>
 `
   },
-  {name: "Dual Sense Edge Playstation Controller", image: "product2.jpg", price: 150, buyEmbed: "<!-- PLACE FULL SQUARE EMBED HERE -->"},
+  {name: "Dual Sense Edge Playstation Controller", image: "product2.jpg", price: 150, buyEmbed: "<div style="
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  width: 259px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+  border-radius: 10px;
+  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
+  ">
+  <div style="padding: 20px;">
+    <a target="_blank" href="https://square.link/u/XLbdycEy?src=embed" style="
+    display: inline-block;
+    font-size: 18px;
+    line-height: 48px;
+    height: 48px;
+    color: #000000;
+    min-width: 212px;
+    background-color: #ffbf00;
+    text-align: center;
+    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+    border-radius: 0px;
+  ">Buy now</a>
+  </div>
+</div>"
+`
+},
+  
   {name: "Dewalt Combo Kit", image: "product3.jpg", price: 150, buyEmbed: "<!-- PLACE FULL SQUARE EMBED HERE -->"},
   {name: "NutriBullet", image: "product4.jpg", price: 110, buyEmbed: "<!-- PLACE FULL SQUARE EMBED HERE -->"},
   {name: "Rog Ally X", image: "product5.jpg", price: 799.99, buyEmbed: "<!-- PLACE FULL SQUARE EMBED HERE -->"},
@@ -139,4 +169,5 @@ const products = [
 
 </body>
 </html>
+
 
