--- a/store.html
+++ b/store.html
@@ -71,7 +71,7 @@
   </div>
 </footer>
   
-<----products---->
+<!-- products -->
   
 <script>
 document.addEventListener("DOMContentLoaded", function() {
@@ -261,6 +261,7 @@ const products = [
 
 </body>
 </html>
+
 
 
 
