--- a/store.html
+++ b/store.html
@@ -94,7 +94,7 @@ const products = [
   font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
   ">
   <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/TWHhxps5?src=embed" style="
+    <a target="_blank" href="https://square.link/u/tz5KiDom?src=embed" style="
     display: inline-block;
     font-size: 18px;
     line-height: 48px;
@@ -260,6 +260,7 @@ const products = [
 
 </body>
 </html>
+
 
 
 
